# LBCgo

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  __init__.py  pyproject.toml  setup.cfg
.claude/: settings.json  settings.local.json
LBCgo/: #lbcregister.py#  00ToDo  00ToDo.md  __init__.py  fix_Ifilter.py  lbcproc.py  lbcregister.py  org.py  proc.py  pyhrs.py  reduceccd_example.py  register.py  sort_files.py  utils.py  whatidid.astrom.py~
LBCgo/conf/: scamp.lbc.conf  sextractor.lbc.conf  swarp.lbc.conf
data/: lbcb.20230101.000001_flat.fits  lbcb.20230101.000001_over.fits
docs/: conf.py  index.rst  installation.rst  pipeline.rst  quickstart.rst  whatidid.LBCgo.2016.02.py
tests/: TEST_PLAN.md  conftest.py  test_bias.py  test_extractchips.py  test_flatfield.py  test_overscan.py  test_register.py  test_targetdirs.py
