[tool.poetry]
name = "LBCgo"
version = "0.1.5"
description = "Data reduction for the LBT's Large Binocular Camera"
authors = ["Chris Howk <jhowk@nd.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jchowk/LBCgo"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^2.0"
astropy = "^5.3.3"
ccdproc = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"