[project]
name = "LBCgo"
version = "0.1.6"
description = "Data reduction for the LBT's Large Binocular Camera"
authors = [
    {name = "Chris Howk", email = "jhowk@nd.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21,<2.0",
    "astropy>=5.3.3",
    "ccdproc>=2.2.0,<3.0.0"
]

[project.urls]
homepage = "https://github.com/jchowk/LBCgo"

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "sphinx-autoapi>=3.0",
    "furo",
]

[tool.poetry]
packages = [{include = "LBCgo"}]

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.0"
sphinx-autoapi = ">=3.0"
furo = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
